--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.2",
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
