--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  "homepage": "https://mar1ape.github.io/Meme-Generator/",
   "name": "meme-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
